7/8/2006 - jdiamond
====================

 * Support for domain transfers and domain renewals
 * Completed all major functions of the Order interface.  Minor touch-ups remain.

 *** PLEASE NOTE: this commit contains a new database scheme ***

6/29/2006 - jdiamond
====================

 * (trac #15) Removed new-lines from the end of PHP files and converted files with DOS new-lines to Unix.

6/26/2006 - jdiamond
====================

 * (trac #63) Bundled Smarty with SolidWorks

 *** PLEASE NOTE: this commit contains a new database scheme ***

6/8/2006 - jdiamond
====================

 * Support for Payment Processor modules

 * A Paypal Web Payments Standard module

 * Complete checkout process for the Order interface

 *** PLEASE NOTE: this commit contains a new database scheme ***

5/29/2006 - jdiamond
====================

 * Implemented a new Modules framework.

 * Developed a new Reseller Club / Directi Module to fit the new Modules framework

 *** PLEASE NOTE: this commit contains a new database scheme ***

5/16/2006 - jdiamond
====================

 * (issue #49) Portuguese translation for the Manager interface (provided by Ivo Monteiro aka SniperPT)

5/14/2006 - jdiamond
====================

 * On 5/12/2006, SourceForge.net upgraded their CVS infrastructure.  This commit brings my latest codebase into the repository
   and updates my working copy to reflect the changes made during the upgrade.

5/7/2006 - jdiamond
====================

 * Removed config.inc.php from the source tree and added config.template.

4/24/2006 - jdiamond
====================

 * (issue #44) Italian translation for the Manager interface (provided by brizzz)

4/14/2006 - jdiamond
====================

 * (issue #32) The Registered Domains table and the Expired Domains table can now be sorted by expire date and account name.

   *** PLEASE NOTE: this commit contains a new database scheme ***

4/13/2006 - jdiamond
====================

 * (issue #31) Added tax support.
