@@ -1,0 +1,20 @@
+<module name="nullregistrar">
+
+  <pages>
+    <page name="nr_config"
+          title="[NULL_REGISTRAR]"
+          class="NRConfigPage"
+          class_file="modules/nullregistrar/pages/NRConfigPage.class.php"
+          parent="modules"
+          url="manager_content.php?page=nr_config">
+      <templates>
+        <template name="default" file="nr_ConfigPage.tpl"/>
+      </templates>
+    </page>
+
+  </pages>
+
+  <forms>
+  </forms>
+
+</module>
