@@ -1,0 +1,4 @@
+<h2> {echo phrase="NULL_REGISTRAR_MODULE"} </h2>
+<p>
+  {echo phrase="NULL_REGISTRAR_CONFIG_TEXT"}
+</p>
