@@ -1,0 +1,14 @@
+<translations>
+
+  <!-- ======= -->
+  <!-- English -->
+  <!-- ======= -->
+  <translation language="english">
+
+    <phrase id="NULL_REGISTRAR">Null Registrar</phrase>
+    <phrase id="NULL_REGISTRAR_CONFIG_TEXT">There is no need to configure the Null Registrar.  This module does not communicate with any Registrar.  Use it for TLD's that you register through non-supported Registrars.</phrase>
+    <phrase id="NULL_REGISTRAR_MODULE">Null Registrar Module</phrase>
+
+  </translation>
+
+</translations>
